Add release task to grunt.js, using custom zip task. Currently breaks due to a bug in zipstream (#5).

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "validation",
+  "name": "jquery-validation",
   "title": "jQuery Validation Plugin",
   "description": "Form validation made easy",
-  "version": "1.9.0",
+  "version": "1.10.0pre",
   "homepage": "https://github.com/jzaefferer/jquery-validation",
   "author": {
     "name": "Jörn Zaefferer",
@@ -19,10 +19,17 @@
   "licenses": [
     {
       "type": "MIT",
-      "url": "https://github.com/jzaefferer/jquery-validation/blob/master/LICENSE-MIT"
+      "url": "http://www.opensource.org/licenses/MIT"
+    },
+    {
+      "type": "GPL",
+      "url": "http://www.opensource.org/licenses/GPL-2.0"
     }
   ],
   "dependencies": {},
-  "devDependencies": {},
+  "devDependencies": {
+    "grunt": "0.2.x",
+    "zipstream": "0.2.x"
+  },
   "keywords": []
 }
