GitHub has some issue with Head
GitHub.com is not comparing to latest master when doing Pull Request, so
I'm manually reverting these files so that GitHub only includes my real
challenges.

--- a/package.json
+++ b/package.json
@@ -20,6 +20,10 @@
     {
       "type": "MIT",
       "url": "http://www.opensource.org/licenses/MIT"
+    },
+    {  	
+      "type": "GPL",
+      "url": "http://www.opensource.org/licenses/GPL-2.0"
     }
   ],
   "scripts": {
@@ -30,9 +34,5 @@
     "grunt": "0.3.x",
     "zipstream": "0.2.x"
   },
-  "keywords": [
-    "forms",
-    "validation",
-    "validate"
-  ]
+  "keywords": []
 }
