Fix npm test task

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     }
   ],
   "scripts": {
-    "test": "grunt jshint qunit"
+    "test": "grunt"
   },
   "dependencies": {},
   "devDependencies": {
