--- a/package.json
+++ b/package.json
@@ -27,9 +27,9 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "grunt": "0.4.x",
-    "grunt-contrib-qunit": "~0.2.0",
-    "grunt-contrib-jshint": "~0.2.0",
+    "grunt": "~0.4.1",
+    "grunt-contrib-qunit": "~0.2.1",
+    "grunt-contrib-jshint": "~0.4.3",
     "grunt-contrib-uglify": "~0.1.1",
     "grunt-contrib-concat": "~0.1.3",
     "grunt-zipstream": "~0.2.2"
