--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: node_js
 node_js:
-  - 0.8
-install:
-  - npm install grunt-cli -g
-  - npm install
+  - 0.10
+before_script:
+  - npm install -g grunt-cli
+env:
+  - [
+      {secure: "RKVQ7QdbsNAiAKGiEcJ64T4cvZjHjZ/O8VOJ1gycFILNxkXdq+6RVWRUy495\nvIg83ab99Fw2pTKsI31FLpcdumZ+YJtzKGiQNACNdxeh72Quk2U5C/eCN/CY\nBmf/BwHvVi+cQ3xrBBD8Fyvyn+9x4P+6wqmJd9Q6zYze/w8kdWY="},
+      {secure: "m8nGybCWW7BthkBEUzZv4OUT9M9gYqob4aC7qMGobHwh/U+2eSWUhk6ZRvtV\nWIsZkwYIjToMi0bPCstuSIRUeT7ceEkJ86zxKdrSuDBW8MtQJsJIrNgJobyP\ntSeaixo4qNugRrETj+2CGCgcF9M7Bp5Uzg0j+R8p5iOjFnAiJsY="}
+    ]
+notifications:
+  email:
+    on_success: never
