--- a/package.json
+++ b/package.json
@@ -32,7 +32,7 @@
     "grunt-contrib-jshint": "~0.4.3",
     "grunt-contrib-uglify": "~0.1.1",
     "grunt-contrib-concat": "~0.1.3",
-    "grunt-zipstream": "~0.2.2"
+    "grunt-contrib-compress": "~0.5.2"
   },
   "keywords": [
     "forms",
