Bower: Add Bower.json for package registration
Also update homepage in package.json to match values.

Closes gh-982
See gh-978

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "title": "jQuery Validation Plugin",
   "description": "Form validation made easy",
   "version": "1.12.0pre",
-  "homepage": "https://github.com/jzaefferer/jquery-validation",
+  "homepage": "http://jqueryvalidation.org/",
   "author": {
     "name": "Jörn Zaefferer",
     "email": "joern.zaefferer@gmail.com",
