--- a/package.json
+++ b/package.json
@@ -33,7 +33,9 @@
     "grunt-contrib-uglify": "~0.2.7",
     "grunt-contrib-concat": "~0.3.0",
     "grunt-contrib-compress": "~0.6.0",
-    "grunt-contrib-watch": "~0.5.3"
+    "grunt-contrib-watch": "~0.5.3",
+    "jscoverage": "~0.3.8",
+    "coveralls": "~2.6.1"
   },
   "keywords": [
     "forms",
