JSHint: Add back globals for browser and console

--- a/.jshintrc
+++ b/.jshintrc
@@ -13,5 +13,10 @@
 	"undef": true,
 	"unused": true,
 
-	"jquery": true
+	"jquery": true,
+	"browser": true,
+
+	"globals": {
+		"console": true
+	}
 }
