--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
+		"commitplease": "1.7.0",
 		"grunt": "0.4.4",
 		"grunt-contrib-qunit": "0.4.0",
 		"grunt-contrib-jshint": "0.8.0",
