Build: Bump and merge JSHint/JSCS config
Moved options depreciated in the latest JSHint to the JSCS version.

--- a/.jshintrc
+++ b/.jshintrc
@@ -6,12 +6,9 @@
 	"expr": true,
 	"immed": true,
 	"noarg": true,
-	"onevar": true,
-	"quotmark": "double",
-	"smarttabs": true,
-	"trailing": true,
 	"undef": true,
 	"unused": true,
+	"es3": true,
 
 	"jquery": true,
 	"browser": true,
