--- a/package.json
+++ b/package.json
@@ -29,14 +29,14 @@
 	"devDependencies": {
 		"commitplease": "1.7.0",
 		"grunt": "0.4.4",
-		"grunt-contrib-qunit": "0.4.0",
-		"grunt-contrib-jshint": "0.8.0",
-		"grunt-contrib-uglify": "0.4.0",
-		"grunt-contrib-concat": "0.3.0",
 		"grunt-contrib-compress": "0.7.0",
-		"grunt-contrib-watch": "0.6.0",
-		"grunt-jscs-checker": "0.4.0",
+		"grunt-contrib-concat": "0.3.0",
 		"grunt-contrib-copy": "0.5.0",
+		"grunt-contrib-jshint": "^0.10.0",
+		"grunt-contrib-qunit": "0.4.0",
+		"grunt-contrib-uglify": "0.4.0",
+		"grunt-contrib-watch": "0.6.0",
+		"grunt-jscs-checker": "^0.4.4",
 		"grunt-text-replace": "0.3.11"
 	},
 	"keywords": [
