Build: Run JSCS against tests

--- a/.jscsrc
+++ b/.jscsrc
@@ -16,6 +16,7 @@
 	"requireMultipleVarDecl": "onevar",
 	"disallowTrailingWhitespace": true,
 	"validateQuoteMarks": "\"",
+	"requireSpacesInsideArrayBrackets": "allButNested",
 	"excludeFiles": [
 		"node_modules/**",
 		"dist/**"
