--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
 		"grunt-contrib-qunit": "0.4.0",
 		"grunt-contrib-uglify": "0.4.0",
 		"grunt-contrib-watch": "0.6.0",
-		"grunt-jscs-checker": "^0.4.4",
+		"grunt-jscs": "^0.6.1",
 		"grunt-text-replace": "0.3.11"
 	},
 	"keywords": [
