Build: Fix the jscs upgrade, disable some rules for now

--- a/.jscsrc
+++ b/.jscsrc
@@ -15,5 +15,7 @@
 	"excludeFiles": [
 		"node_modules/**",
 		"dist/**"
-	]
+	],
+	"maximumLineLength": null,
+	"requireCamelCaseOrUpperCaseIdentifiers": null
 }
