--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "jquery-validation",
 	"title": "jQuery Validation Plugin",
 	"description": "Form validation made easy",
-	"version": "1.13.0pre",
+	"version": "1.13.0-pre",
 	"homepage": "http://jqueryvalidation.org/",
 	"author": {
 		"name": "Jörn Zaefferer",
