--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "jquery-validation",
 	"title": "jQuery Validation Plugin",
-	"description": "Form validation made easy",
+	"description": "Client-side form validation made easy",
 	"version": "1.13.2-pre",
 	"homepage": "http://jqueryvalidation.org/",
 	"author": {
@@ -36,10 +36,12 @@
 		"grunt-contrib-qunit": "0.4.0",
 		"grunt-contrib-uglify": "0.4.0",
 		"grunt-contrib-watch": "0.6.0",
-		"grunt-jscs": "^0.6.1",
+		"grunt-jscs": "0.8.0",
 		"grunt-text-replace": "0.3.11"
 	},
 	"keywords": [
+		"jquery",
+		"jquery-plugin",
 		"forms",
 		"validation",
 		"validate"
