Build: Publish dist files on npm, add main directive
Fixes #1339

--- a/package.json
+++ b/package.json
@@ -23,8 +23,11 @@
 		}
 	],
 	"scripts": {
-		"test": "grunt"
+		"test": "grunt",
+		"prepublish": "grunt"
 	},
+	"files": ["dist/localization/", "dist/additional-methods.js", "dist/jquery.validate.js"],
+	"main": "dist/jquery.validate.js",
 	"dependencies": {},
 	"devDependencies": {
 		"commitplease": "2.0.0",
