--- a/package.json
+++ b/package.json
@@ -35,17 +35,17 @@
 	"main": "dist/jquery.validate.js",
 	"dependencies": {},
 	"devDependencies": {
-		"commitplease": "2.0.0",
-		"grunt": "0.4.4",
-		"grunt-contrib-compress": "0.7.0",
-		"grunt-contrib-concat": "0.3.0",
-		"grunt-contrib-copy": "0.5.0",
-		"grunt-contrib-jshint": "^0.10.0",
-		"grunt-contrib-qunit": "0.4.0",
-		"grunt-contrib-uglify": "0.4.0",
-		"grunt-contrib-watch": "0.6.0",
-		"grunt-jscs": "1.0.0",
-		"grunt-text-replace": "0.3.11"
+		"commitplease": "^2.2.3",
+		"grunt": "^0.4.4",
+		"grunt-contrib-compress": "^0.7.0",
+		"grunt-contrib-concat": "^0.3.0",
+		"grunt-contrib-copy": "^0.5.0",
+		"grunt-contrib-jshint": "^0.11.3",
+		"grunt-contrib-qunit": "^0.4.0",
+		"grunt-contrib-uglify": "^0.4.0",
+		"grunt-contrib-watch": "^0.6.0",
+		"grunt-jscs": "^2.2.0",
+		"grunt-text-replace": "^0.3.11"
 	},
 	"keywords": [
 		"jquery",
