Build: Cache npm modules on travis builds

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,12 @@ language: node_js
 node_js:
   - 0.12
 
-cache:
-  - npm
 sudo: false
 
 install:
   - npm install grunt-cli -g
   - npm install
+
+cache:
+  directories:
+    - node_modules
