Tests: Upgrade QUnit to 2.0

--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
 		"grunt-contrib-watch": "1.0.0",
 		"grunt-jscs": "2.8.0",
 		"grunt-text-replace": "0.4.0",
-		"qunitjs": "2.0.0-rc1"
+		"qunitjs": "2.0.0"
 	},
 	"keywords": [
 		"jquery",
