Include Minified Version in NPM Package
https://github.com/jzaefferer/jquery-validation/issues/1772

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 	"files": [
 		"dist/localization/",
 		"dist/additional-methods.js",
-		"dist/jquery.validate.js"
+		"dist/jquery.validate.js",
+		"dist/jquery.validate.min.js"
 	],
 	"main": "dist/jquery.validate.js",
 	"dependencies": {
