--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 	],
 	"main": "dist/jquery.validate.js",
 	"dependencies": {
-		"jquery": "^1.7 || ^2.0"
+		"jquery": "^1.7 || ^2.0 || ^3.1"
 	},
 	"devDependencies": {
 		"commitplease": "2.3.1",
