Build: Include minified version of additional methods in npm package
Fixes #2056

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
 	"files": [
 		"dist/localization/",
 		"dist/additional-methods.js",
+		"dist/additional-methods.min.js",
 		"dist/jquery.validate.js",
 		"dist/jquery.validate.min.js"
 	],
