--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
 		"dist/jquery.validate.min.js"
 	],
 	"main": "dist/jquery.validate.js",
-	"dependencies": {
+	"peerDependencies": {
 		"jquery": "^1.7 || ^2.0 || ^3.1"
 	},
 	"devDependencies": {
