--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "jquery-validation",
 	"title": "jQuery Validation Plugin",
 	"description": "Client-side form validation made easy",
-	"version": "1.19.6-pre",
+	"version": "1.19.6-pre2",
 	"homepage": "https://jqueryvalidation.org/",
 	"license": "MIT",
 	"author": {
