Core: Added support for Web Components. Fixes #2492

--- a/.jscsrc
+++ b/.jscsrc
@@ -1,5 +1,8 @@
 {
 	"preset": "jquery",
 	"maximumLineLength": null,
-	"requireCamelCaseOrUpperCaseIdentifiers": null
+	"requireCamelCaseOrUpperCaseIdentifiers": null,
+	"excludeFiles": [
+		"test/custom-elements.js"
+	]
 }
